--- a/chat-challenge/src/app/app.html
+++ b/chat-challenge/src/app/app.html
@@ -1,5 +1,7 @@
 <div class="flex flex-col h-screen bg-white">
-  <div class="flex justify-between items-center flex-initial h-[50px] py-0 px-2 bg-blue-800">
+  <div
+    class="flex md:justify-between items-center flex-initial h-[50px] py-0 px-2 bg-blue-800 gap-5"
+  >
     <div class="flex items-center gap-1">
       <span class="text-white text-lg font-bold">1million</span>
       <span class="text-white text-sm font-semibold rounded-sm py-1 px-2 bg-red-600">bot</span>
